--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -65,6 +65,9 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation platform('com.google.firebase:firebase-bom:29.0.0')
+    implementation 'com.google.firebase:firebase-auth'
+    implementation 'com.google.android.gms:play-services-auth:19.2.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
