--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,12 +35,15 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
  
+  cloud_firestore: ^3.1.0
   firebase_core: ^1.10.0
   firebase_auth: ^3.2.0
   google_sign_in: ^5.2.1
   provider: ^6.0.1
 
   google_fonts: ^2.1.0
+  fluttertoast: ^8.0.8
+  
 
 dev_dependencies:
   flutter_test:
