Added insta_like_button package

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   fluttertoast: ^8.0.8
   motion_toast: ^1.6.0
   carousel_slider: ^4.0.0
+  insta_like_button: ^0.1.1
   
 
 dev_dependencies:
