--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   firebase_auth: ^3.2.0
   google_sign_in: ^5.2.1
   provider: ^6.0.1
+  hive: ^2.0.4
+  hive_flutter: ^1.1.0
 
   google_fonts: ^2.1.0
   fluttertoast: ^8.0.8
@@ -52,12 +54,10 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
+ 
   flutter_lints: ^1.0.0
+  build_runner: ^2.1.5
+  hive_generator: ^1.1.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
