--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_auth: ^3.2.0
   google_sign_in: ^5.2.1
   provider: ^6.0.1
+  path_provider: ^2.0.8
   hive: ^2.0.4
   hive_flutter: ^1.1.0
 
