--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,9 +46,9 @@ dependencies:
 
   google_fonts: ^2.1.0
   fluttertoast: ^8.0.8
-  motion_toast: ^1.6.0
   carousel_slider: ^4.0.0
   insta_like_button: ^0.1.1
+  like_button: ^2.0.4
   
 
 dev_dependencies:
